--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Yi-Hong Chen</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Joe.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://yih-chen.github.io/images/Joe.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -40,17 +40,17 @@
                 <div class="row">
                     <div class="col-9 col-lg-3">
                         <div class="site-branding">
-                            <h1 class="site-title"><a href="index.html" rel="home"></a></h1>
+                            <h1 class="site-title"><a href="https://yih-chen.github.io" rel="home"></a></h1>
                         </div><!-- .site-branding -->
                     </div><!-- .col -->
 
                     <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                         <nav class="site-navigation flex justify-content-end align-items-center">
                             <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li class="current-menu-item"><a href="index.html">首頁</a></li>
-                                <li><a href="about.html">關於我</a></li>
-                                <li><a href="learning/learningindex.html">學習紀錄</a></li>
-                                <li><a href="life/index.html">生活紀錄</a></li>
+                                <li class="current-menu-item"><a href="https://yih-chen.github.io">首頁</a></li>
+                                <li><a href="https://yih-chen.github.io/about.html">關於我</a></li>
+                                <li><a href="https://yih-chen.github.io/learning/learningindex.html">學習紀錄</a></li>
+                                <li><a href="https://yih-chen.github.io/life/index.html">生活紀錄</a></li>
                             </ul>
 
                             <div class="hamburger-menu d-lg-none">
