修改倒轉的頁面

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                         <nav class="site-navigation flex justify-content-end align-items-center">
                             <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li class="current-menu-item"><a href="https://yih-chen.github.io">首頁</a></li>
+                                <li class="current-menu-item"><a href="https://yih-chen.github.io/index.html">首頁</a></li>
                                 <li><a href="https://yih-chen.github.io/about.html">關於我</a></li>
                                 <li><a href="https://yih-chen.github.io/learning/learningindex.html">學習紀錄</a></li>
                                 <li><a href="https://yih-chen.github.io/life/index.html">生活紀錄</a></li>
