--- a/life/index.html
+++ b/life/index.html
@@ -69,6 +69,97 @@
             </div><!-- .container -->
         </div>
 
+        <div class="container">
+            <div class="col-lg-8">
+                <div class="row1">
+                    <div class="col-md-12 mb-4">
+                        <article class="card">
+                            <div class="card-body">
+                                <a href="https://yih-chen.github.io/life/salamanders/cynops.html" class="d-block my-3"><h3>蠑螈屬 Cynops</h3></a>
+                                <div class="mb-3"><span>By Joe</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+                                    <span>2022-09-22</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                </div>
+                                <p class="card-text">Cynops屬的蠑螈簡介</p>
+                                <a href="https://yih-chen.github.io/life/salamanders/cynops.html" class="btn btn-outline-primary">read more</a>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-md-12 mb-4">
+                        <article class="card">
+
+                            <div class="card-body">
+                                <a href="https://yih-chen.github.io/life/salamanders/ambystoma-maculatum.html" class="d-block my-3"><h3>星點蠑螈 Ambystoma maculatum</h3></a>
+                                <div class="mb-3"><span>By Joe</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+                                    <span>2022-09-22</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                </div>
+                                <p class="card-text">星點蠑螈介紹</p>
+                                <a href="https://yih-chen.github.io/life/salamanders/ambystoma-maculatum.html" class="btn btn-outline-primary">read more</a>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-md-12 mb-4">
+                        <article class="card">
+
+                            <div class="card-body">
+                                <a href="https://yih-chen.github.io/life/salamanders/ambystoma-tigrinum-mavortium.html" class="d-block my-3"><h3>虎皮蠑螈 Ambystoma tigrinum mavortium</h3></a>
+                                <div class="mb-3"><span>By Joe</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+                                    <span>2022-09-22</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                </div>
+                                <p class="card-text">虎皮蠑螈介紹</p>
+                                <a href="https://yih-chen.github.io/life/salamanders/ambystoma-tigrinum-mavortium.html" class="btn btn-outline-primary">read more</a>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-md-12 mb-4">
+                        <article class="card">
+
+                            <div class="card-body">
+                                <a href="https://yih-chen.github.io/life/salamanders/siren-lacertina.html" class="d-block my-3"><h3>大鰻螈 Siren lacertina</h3></a>
+                                <div class="mb-3"><span>By Joe</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+                                    <span>2022-09-22</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                </div>
+                                <p class="card-text">大鰻螈介紹</p>
+                                <a href="https://yih-chen.github.io/life/salamanders/siren-lacertina.html" class="btn btn-outline-primary">read more</a>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-md-12 mb-4">
+                        <article class="card">
+
+                            <div class="card-body">
+                                <a href="https://yih-chen.github.io/life/salamanders/salamandra.html" class="d-block my-3"><h3>真螈屬 Salamandra</h3></a>
+                                <div class="mb-3"><span>By Joe</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+                                    <span>2022-09-22</span>
+                                    <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                </div>
+                                <p class="card-text">Salamandra屬蠑螈介紹</p>
+                                <a href="https://yih-chen.github.io/life/salamanders/salamandra.html" class="btn btn-outline-primary">read more</a>
+                            </div>
+                        </article>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
