新增首頁內容

--- a/index.html
+++ b/index.html
@@ -69,6 +69,65 @@
             </div><!-- .container -->
         </div>
 
+        <div>
+            <div class="container-fluid p-0 pr-150 pr-320" style="width:55.589%;">
+
+                <p>
+
+                </p>
+                <p class="lead">
+                    瀏覽器,記錄了使用者的瀏覽紀錄,<br>
+                    相片,記錄了我們的生活點滴,<br>
+                    歷史,記錄了人類文明的變革.
+                </p>
+                <p class="lead">
+                    在我半隻腳踏入碩士的階段，我總想著自己的研究、提出的論文要對該領域有巨大的貢獻或是影響力。<br>
+                    <b>能夠被別人記住我的貢獻</b>
+                    ，這是我對自己的期望和抱負。<br>
+                    然而，在實際投入研究後我才發現，現實和理想的差別如此巨大。<br>
+                    總是將現實歸於理想化，最後結果不如預期時，就會感到無比挫折和大大的無力感...<br>
+                </p>
+                <p class="lead mb-5">
+                    <b>
+                        我們的目標不是要拚諾貝爾獎,<br>
+                        碩士只有兩年的時間,你也很難拚過那些半輩子都在這領域裡鑽研的人,<br>
+                        因為你我都不是天才.<br>
+                    </b>
+                    這是我的指導教授告訴我的一席話，也猶如當頭棒喝般，讓我清醒和重新確立我的目標。
+                </p>
+                <p class="lead mb-5">
+                    在這幾十億人口的世界，你我都很渺小，曾經做過的事也可能鮮少會被人記住。<br>
+
+                    但，
+                    <b>
+                        我們可以為了自己而記錄
+                    </b>
+                    。<br>
+                    Blog的想法油然而生...
+                </p>
+                <p class="lead mb-5">
+
+                    網站裡，
+                    <b>
+                        關於我
+                    </b>
+                    的部分，記錄了從大學到目前步入社會的心路歷程...等<br>
+
+                    <b>
+                        工作紀錄
+                    </b>
+                    ，主要是筆記實際開發的經驗或是個人的工作筆記，當作自己的小知識庫<br>
+
+                    <b>
+                        生活紀錄
+                    </b>
+                    ，用以筆記我的興趣愛好，也讓一些不認識牠們的人有機會了解牠們，希望你會感受到大自然的神奇造化。
+
+                </p>
+
+            </div>
+        </div>
+
         <!-- Page Content-->
 
         <!-- Bootstrap core JS-->
