--- a/index.html
+++ b/index.html
@@ -75,11 +75,20 @@
                 <p>
 
                 </p>
-                <p class="lead">
+                <h5>
                     瀏覽器,記錄了使用者的瀏覽紀錄,<br>
+                </h5>
+                <h5>
                     相片,記錄了我們的生活點滴,<br>
+                </h5>
+                <h5>
                     歷史,記錄了人類文明的變革.
+                </h5>
+
+                <p class="lead mb-5">
+
                 </p>
+
                 <p class="lead">
                     在我半隻腳踏入碩士的階段，我總想著自己的研究、提出的論文要對該領域有巨大的貢獻或是影響力。<br>
                     <b>能夠被別人記住我的貢獻</b>
@@ -103,8 +112,15 @@
                         我們可以為了自己而記錄
                     </b>
                     。<br>
-                    Blog的想法油然而生...
+
                 </p>
+
+                <p class="lead mb-5">
+                    <b>
+                        Blog的想法油然而生...
+                    </b>
+                </p>
+
                 <p class="lead mb-5">
 
                     網站裡，
