--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     的部分，記錄了從大學到目前步入社會的心路歷程...等<br>
 
                     <b>
-                        工作紀錄
+                        學習紀錄
                     </b>
                     ，主要是筆記實際開發的經驗或是個人的工作筆記，當作自己的小知識庫<br>
 
