--- a/learning/learningindex.html
+++ b/learning/learningindex.html
@@ -75,15 +75,34 @@
 
                         <div class="col-md-12 mb-4">
                             <article class="card">
+
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/api.html" class="d-block my-3"><h3>API</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/2022/intellij.html" class="d-block my-3"><h3>IntelliJ IDEA</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
-                                        <span>2022-09-03</span>
+                                        <span>2022-09-24</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
+
                                     </div>
-                                    <p class="card-text">了解什麼是API</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/api.html" class="btn btn-outline-primary">read more</a>
+                                    <p class="card-text">Intellij的使用紀錄和安裝方式</p>
+                                    <a href="https://yih-chen.github.io/learning/2022/intellij.html" class="btn btn-outline-primary">read more</a>
+                                </div>
+                            </article>
+                        </div>
+
+                        <div class="col-md-12 mb-4">
+                            <article class="card">
+
+                                <div class="card-body">
+                                    <a href="https://yih-chen.github.io/learning/2022/ide.html" class="d-block my-3"><h3>整合開發環境 IDE</h3></a>
+                                    <div class="mb-3"><span>By Joe</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+                                        <span>2022-09-24</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                    </div>
+                                    <p class="card-text">認識IDE</p>
+                                    <a href="https://yih-chen.github.io/learning/2022/ide.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -99,6 +118,21 @@
                                     </div>
                                     <p class="card-text">理解何為REST</p>
                                     <a href="https://yih-chen.github.io/learning/2022/rest.html" class="btn btn-outline-primary">read more</a>
+                                </div>
+                            </article>
+                        </div>
+
+                        <div class="col-md-12 mb-4">
+                            <article class="card">
+                                <div class="card-body">
+                                    <a href="https://yih-chen.github.io/learning/2022/api.html" class="d-block my-3"><h3>API</h3></a>
+                                    <div class="mb-3"><span>By Joe</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+                                        <span>2022-09-03</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+                                    </div>
+                                    <p class="card-text">了解什麼是API</p>
+                                    <a href="https://yih-chen.github.io/learning/2022/api.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
