新增文章-火蠑螈

--- a/life/salamanders/salamandra.html
+++ b/life/salamanders/salamandra.html
@@ -100,19 +100,112 @@
                 <h4>
                     概述：
                 </h4>
+                <p class="lead">
+                    火蠑螈，在歐洲可以說是最著名的一種蠑螈。<br>
+                    其背景故事要追朔至中世紀的歐洲大陸...<br>
+                    在中世紀時期，西方大陸盛行煉金之術，而他們煉金術的理論基礎是建立在亞里斯多德所提出的四元素學說上，也就是所謂的"風"、"火"、"水"、"土"等四元素。<br>
+                    而在帕拉賽爾斯關於煉金術的著作中又提出了元素精靈的概念，將世界分為了四種元素以及其主掌元素的精靈所組成：<br>
+                    地元素 -> 諾姆<br>
+                    水元素 -> 溫蒂妮<br>
+                    風元素 -> 西爾芙<br>
+                    <b>火元素 -> 沙羅曼達</b>
+                </p>
 
+                <p class="lead">
+                    對於沙羅曼達這個充滿傳說色彩生物的幻想，在中世紀被歐洲人加諸於蠑螈之上，而這些幻想確實有許多源自蠑螈的真實習性。
+                </p>
+
+                <p class="lead mb-5">
+                    回歸正題，<br>
+                    火蠑螈在歐洲算是普遍的兩棲類動物，種類繁多，花色上的變化可謂是五花八門。<br>
+                    多數的體色呈黑，並帶有黃\橙\紅等不同斑紋，不同的品種會帶有不同的斑紋。<br>
+                    牠們偏向夜行性動物，晝伏夜出，喜歡藏匿於枯木或石頭下保持涼爽和潮濕，所以如果在白天觀察牠們，你會發現牠們活動力不高。<br>
+                    而目前在臺灣常出現且流通率較高的當屬法國火蠑螈 S.s.s (幾年前曾出現一批義大利火蠑螈 S.s.g)。
+                </p>
+
+                <h4>
+                    性別區分：
+                </h4>
+                <img src="https://yih-chen.github.io/images/fireSalamanderSex.jpg" width="90%">
+                <p></p>
+                <p class="lead mb-5">
+                    雌性火蠑螈通常會比男性大，但最好還是透過泄殖腔進行確認還是較為穩妥。<br>
+                    如圖所示，從側面觀察，雌性（右）的泄殖腔周圍較為平坦而雄性（左）的泄殖腔周圍因存放生殖器，看起來會較為凸出明顯。
+                </p>
+
+                <h4>
+                    毒素：
+                </h4>
+                <img src="https://yih-chen.github.io/images/salamanderToxin.jpg" width="90%">
+                <p></p>
+                <p class="lead mb-5">
+                    火蠑螈的眼後兩側具和背部兩側都具有毒腺，在遇到危險時，透過眼後的毒囊分泌毒液(如上圖)。<br>
+                    這種生物鹼毒素據悉是由體內一些器官代謝所產生的，且在火蠑螈為成體時才會產生毒素。<br>
+                    在<a href="https://www.jstor.org/stable/3892595">Herpetologica的其中一篇期刊內還描述</a>到，火蠑螈可以透過肌肉收縮的方式將腺體內的毒素加壓，進而造成噴射毒液的效果用於嚇阻捕食者。
+                </p>
+
+                <h4>
+                    互動行為：
+                </h4>
+                <p class="lead">
+                    個人目前飼養上遇過幾種蠻有趣的互動行為，例如：打架<br>
+                    <b>
+                        打架
+                    </b>
+                    ，這種行為在群養的餵食上發生的機率較高，尤其是有多隻雄性火蠑螈時，
+                    牠們多半會利用前肢，抱住另一隻火蠑螈的頭部或頸部死纏著不放（所以有時候就會看到3-4隻扭打在一起）。<br>
+                </p>
+                <img src="https://yih-chen.github.io/images/fireSalamanderBreeding.jpg" width="90%">
+                <p></p>
+                <p class="lead">
+                    <b>
+                        交配
+                    </b>
+                    ，當雄性火蠑螈發現可能的配偶時，牠會試著擋住雌性火蠑螈，然後鑽到雌性的下方，並利用前肢牢牢地扣住雌性的前肢，揹著雌性移動。<br>
+                    同時對雌性反覆進行磨蹭行為，磨蹭其頭部和尾巴(如上圖)。<br>
+                </p>
+                <img src="https://yih-chen.github.io/images/SeminalVesicles.jpg" width="90%">
+                <p></p>
+                <p class="lead mb-5">
+                    經過這些動作後，雄性會在地上釋放一個成三角錐狀的精囊(如上圖)，而雌性會透過洩殖腔將其吸收至體內。<br>
+                    交配行為可能會持續數月，而精囊也能夠在雌性體內儲存數月，隨時使卵受精。
+                </p>
 
                 <h4>
                     飼養方式：
                 </h4>
+                <p class="lead mb-5">
+                    火蠑螈算是可以群養的動物，在飼養上最好可以準備多一點的遮蔽物提供躲藏，
+                    火蠑螈也善於攀爬，所以缸內的布置也可以有高低的起伏，有時你會發現牠會像壁虎一樣，爬到了一個讓你意想不到的位置。<br>
+                    牠們不像一些蠑螈會長期待在水中，因此在空間規劃上，陸地的佔比會比水池高出需多，
+                    可以準備一個大小適中能夠讓牠泡進去的水盆即可。<br>
+                    陸地部分可以鋪設赤玉土，並且讓土壤保持一定的濕度，再加上一些枯枝樹葉，讓火蠑螈可以透過這些粗糙的物質協助其完成蛻皮。
+                </p>
 
                 <h4>
                     攝食：
                 </h4>
+                <p class="lead mb-5">
+                    火蠑螈為肉食性動物，在野外主要以昆蟲、蛞蝓、蚯蚓等動物為食。<br>
+                    人工飼養上可以餵食蟋蟀、杜比亞、櫻桃紅蟑、麵包蟲(建議去頭)等節肢動物，
+                    <b>
+                        偶爾可以添加一些鈣粉和綜合維生素
+                    </b>
+                    ，補充一些微量元素來維持牠們的生理機能運作、代謝等。
+                </p>
 
                 <h4>
                     飼養溫度：
                 </h4>
+                <p class="lead mb-5">
+                    火蠑螈的原生環境位於海拔約400-1000米，生活的環境氣溫較為舒爽。<br>
+                    而臺灣位於熱帶、亞熱帶季氣候地區，
+                    在夏季最好還是需要配合降溫設備調整飼養環境溫度，讓溫度還是保持在
+                    <b>
+                        18-24度
+                    </b>
+                    左右較為合適。
+                </p>
 
 
 
