--- a/life/index.html
+++ b/life/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Yi-Hong's Blog</title>
         <link rel="icon" type="image/x-icon" href="https://yih-chen.github.io/images/yh.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -25,9 +25,9 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">真螈屬</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">蠑螈屬</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">鰻螈屬</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://yih-chen.github.io/life/salamanders/salamandra.html">真螈屬</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://yih-chen.github.io/life/salamanders/cynops.html">蠑螈屬</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://yih-chen.github.io/life/salamanders/siren-lacertina.html">鰻螈屬</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">鈍口螈屬</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">無肺螈屬</a></li>
 <!--                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>-->
