--- a/learning/learningindex.html
+++ b/learning/learningindex.html
@@ -77,14 +77,31 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmq.html" class="d-block my-3"><h3>RabbitMQ基本概念和安裝</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmqInstall.html" class="d-block my-3"><h3>RabbitMQ安裝</h3></a>
+                                    <div class="mb-3"><span>By Joe</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+                                        <span>2022-10-11</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                    </div>
+                                    <p class="card-text">RabbitMQ的安裝方式以及基本指令用法</p>
+                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmqInstall.html" class="btn btn-outline-primary">read more</a>
+                                </div>
+                            </article>
+                        </div>
+
+                        <div class="col-md-12 mb-4">
+                            <article class="card">
+
+                                <div class="card-body">
+                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmq.html" class="d-block my-3"><h3>RabbitMQ基本概念</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-10-02</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
 
                                     </div>
-                                    <p class="card-text">了解RabbitMQ基本概念和安裝流程</p>
+                                    <p class="card-text">了解RabbitMQ基本概念以及RabbitMQ的模式/種類</p>
                                     <a href="https://yih-chen.github.io/learning/2022/rabbitmq.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
