lerning增加新文章連結

--- a/learning/learningindex.html
+++ b/learning/learningindex.html
@@ -77,6 +77,23 @@
                             <article class="card">
 
                                 <div class="card-body">
+                                    <a href="https://yih-chen.github.io/learning/2022/git02.html" class="d-block my-3"><h3>Git基本操作指令</h3></a>
+                                    <div class="mb-3"><span>By Joe</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+                                        <span>2022-10-21</span>
+                                        <span class="border-bottom border-primary px-2 mx-1"></span>
+
+                                    </div>
+                                    <p class="card-text">了解Git的基本操作指令以及版控的生命週期</p>
+                                    <a href="https://yih-chen.github.io/learning/2022/git02.html" class="btn btn-outline-primary">read more</a>
+                                </div>
+                            </article>
+                        </div>
+
+                        <div class="col-md-12 mb-4">
+                            <article class="card">
+
+                                <div class="card-body">
                                     <a href="https://yih-chen.github.io/learning/2022/rabbitmqInstall.html" class="d-block my-3"><h3>RabbitMQ安裝</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
