修改-公司英文名稱

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                         <a class="subheading mb-5" href="mailto:joe581137307@gmail.com"><i class="fa-sharp fa-solid fa-envelope"></i></a>
                         <a class="subheading mb-5" href="mailto:joe581137307@gmail.com">joe581137307@gmail.com</a>
                     </div>
-                    <p class="lead">我是陳宜鴻，目前在AcPay擔任Backend&nbsp;Developer，負責開發Web&nbsp;API提供特約商店串接並使用
+                    <p class="lead">我是陳宜鴻，目前在ACpay擔任Backend&nbsp;Developer，負責開發Web&nbsp;API提供特約商店串接並使用
                         我們的第三方支付平台。
                     </p>
                     <p class="lead">
