--- a/about.html
+++ b/about.html
@@ -117,9 +117,30 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">後端軟體工程師</h3>
                             <div class="subheading mb-3">交流資服股份有限公司</div>
-                            <p>公司主要負責金流系統開發，透過Java開發Web&nbsp;API提供線上/線下商店串接使用。</p>
+                            <p>公司主要負責金流系統開發，透過Java開發Web&nbsp;API提供線上/線下商店串接使用。工作內容如下：</p>
+                            <ul>
+                                <li>
+                                    系統架構規劃 & 開發
+                                </li>
+                                <li>
+                                    協助完成PCIDSS年度和季度審查，取得合規性的認證，以確保持卡者的信用卡等資訊之安全
+                                </li>
+                                <li>
+                                    進行跨部門溝通以及有效應對和處理外部廠商、收單機構所提出之需求
+                                </li>
+                                <li>
+                                    系統的優化和除錯
+                                </li>
+                                <li>
+                                    提供技術支援，幫助客戶解決串接過程中遇到的各種問題
+                                </li>
+                                <li>
+                                    將公司內部資料進行組織，將資料轉化為資訊
+                                </li>
+
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2022/04 - 至今</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022/04 - 2024/10</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
