modify-工作更新(ACpay)、興趣頁面更新

--- a/life/index.html
+++ b/life/index.html
@@ -28,8 +28,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://yih-chen.github.io/life/salamanders/salamandra.html">真螈屬</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://yih-chen.github.io/life/salamanders/cynops.html">蠑螈屬</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://yih-chen.github.io/life/salamanders/siren-lacertina.html">鰻螈屬</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">鈍口螈屬</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">無肺螈屬</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">鈍口螈屬</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">無肺螈屬</a></li>
 <!--                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>-->
                 </ul>
             </div>
