--- a/life/salamanders/salamandra.html
+++ b/life/salamanders/salamandra.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Cynops">動物界</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">脊索動物門</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">兩棲綱</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">有尾目</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">蠑螈科</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">真螈屬</a></li>
+                    <li class="nav-item">動物界</a></li>
+                    <li class="nav-item">脊索動物門</a></li>
+                    <li class="nav-item">兩棲綱</a></li>
+                    <li class="nav-item">有尾目</a></li>
+                    <li class="nav-item">蠑螈科</a></li>
+                    <li class="nav-item">真螈屬</a></li>
                 </ul>
             </div>
         </nav>
