modify-update skills、awards

--- a/about.html
+++ b/about.html
@@ -266,6 +266,9 @@
                 <li style="font-size:45px"><i class="fa-brands fa-java"></i>&nbsp;&nbsp;Java</li>
                 <li style="font-size:45px"><i class="fa-brands fa-docker"></i>&nbsp;&nbsp;Docker</li>
                 <li style="font-size:45px"><i class="fa-brands fa-git" style="border-style:solid;"></i>&nbsp;&nbsp;Git</li>
+                <p style="font-size:20px">
+                    &nbsp;&nbsp;●&nbsp;&nbsp;SourceTree、TortoiseGit</p>
+                <p style="font-size:20px">
 
                 <li style="font-size:45px"><i class="fa-brands fa-python"></i>&nbsp;&nbsp;Python</li>
                 <p style="font-size:20px">
@@ -284,6 +287,19 @@
                 <p style="font-size:20px">
                     &nbsp;&nbsp;●&nbsp;&nbsp;使用Unity3D開發VR專案，用於協助物理治療學系學生進行模擬訓練。</p>
 
+                <li style="font-size:45px"><i class=""></i>&nbsp;&nbsp;RabbitMQ</li>
+
+                <li style="font-size:45px"><i class=""></i>  Data Base</li>
+                <p style="font-size:20px">
+                    &nbsp;&nbsp;●&nbsp;&nbsp;RDBMS - MS SQL</p>
+                <p style="font-size:20px">
+                    &nbsp;&nbsp;●&nbsp;&nbsp;NoSQL - Redis</p>
+
+                <li style="font-size:45px"><i class=""></i>  Cloud</li>
+                <p style="font-size:20px">
+                    &nbsp;&nbsp;●&nbsp;&nbsp;AWS</p>
+                <p style="font-size:20px">
+                    &nbsp;&nbsp;●&nbsp;&nbsp;Openshift</p>
 
             </ul>
         </div>
@@ -312,6 +328,10 @@
         <div class="resume-section-content">
             <h2 class="mb-5">證照和獲得獎項</h2>
             <ul class="fa-ul mb-0">
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    第16屆iThome鐵人賽(Software Development組-這些年SpringBoot實戰開發教會我的事)
+                </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                     斐陶斐榮譽學會榮譽會員證書
