--- a/learning/learningindex.html
+++ b/learning/learningindex.html
@@ -25,11 +25,11 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Spring Boot</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Git</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">RabbitMQ</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Docker</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Python</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Spring Boot</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Git</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">RabbitMQ</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Docker</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Python</a></li>
 <!--                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>-->
                 </ul>
             </div>
