--- a/learning/learningindex.html
+++ b/learning/learningindex.html
@@ -77,7 +77,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2023/SpringControllerIntroduction.html" class="d-block my-3"><h3>SpringBoot-Controller介紹和實作</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2023/SpringControllerIntroduction.html" class="d-block my-3"><h3>SpringBoot-Controller介紹和實作</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2023-06-12</span>
@@ -85,7 +85,7 @@
 
                                     </div>
                                     <p class="card-text">了解Controller的基本用法以及實作Controller</p>
-                                    <a href="https://yih-chen.github.io/learning/2023/SpringControllerIntroduction.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2023/SpringControllerIntroduction.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -94,7 +94,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2023/springFrameWork.html" class="d-block my-3"><h3>SpringBoot</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2023/springFrameWork.html" class="d-block my-3"><h3>SpringBoot</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2023-03-04</span>
@@ -102,7 +102,7 @@
 
                                     </div>
                                     <p class="card-text">了解SpringBoot框架的基本特性以及常用的Bean</p>
-                                    <a href="https://yih-chen.github.io/learning/2023/springFrameWork.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2023/springFrameWork.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -111,7 +111,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/git02.html" class="d-block my-3"><h3>Git基本操作指令</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/git02.html" class="d-block my-3"><h3>Git基本操作指令</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-10-21</span>
@@ -119,7 +119,7 @@
 
                                     </div>
                                     <p class="card-text">了解Git的基本操作指令以及版控的生命週期</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/git02.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/git02.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -128,7 +128,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmqInstall.html" class="d-block my-3"><h3>RabbitMQ安裝</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/rabbitmqInstall.html" class="d-block my-3"><h3>RabbitMQ安裝</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-10-15</span>
@@ -136,7 +136,7 @@
 
                                     </div>
                                     <p class="card-text">RabbitMQ的安裝方式以及基本指令用法</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmqInstall.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/rabbitmqInstall.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -145,7 +145,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmq.html" class="d-block my-3"><h3>RabbitMQ基本概念</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/rabbitmq.html" class="d-block my-3"><h3>RabbitMQ基本概念</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-10-02</span>
@@ -153,7 +153,7 @@
 
                                     </div>
                                     <p class="card-text">了解RabbitMQ基本概念以及RabbitMQ的模式/種類</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/rabbitmq.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/rabbitmq.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -162,7 +162,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/intellij.html" class="d-block my-3"><h3>IntelliJ IDEA</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/intellij.html" class="d-block my-3"><h3>IntelliJ IDEA</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-09-24</span>
@@ -170,7 +170,7 @@
 
                                     </div>
                                     <p class="card-text">Intellij的使用紀錄和安裝方式</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/intellij.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/intellij.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -179,7 +179,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/ide.html" class="d-block my-3"><h3>整合開發環境 IDE</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/ide.html" class="d-block my-3"><h3>整合開發環境 IDE</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-09-24</span>
@@ -187,7 +187,7 @@
 
                                     </div>
                                     <p class="card-text">認識IDE</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/ide.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/ide.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -195,14 +195,14 @@
                         <div class="col-md-12 mb-4">
                             <article class="card">
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/rest.html" class="d-block my-3"><h3>REST</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/rest.html" class="d-block my-3"><h3>REST</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-09-03</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                     </div>
                                     <p class="card-text">理解何為REST</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/rest.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/rest.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -210,14 +210,14 @@
                         <div class="col-md-12 mb-4">
                             <article class="card">
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/api.html" class="d-block my-3"><h3>API</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/api.html" class="d-block my-3"><h3>API</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-09-03</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                     </div>
                                     <p class="card-text">了解什麼是API</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/api.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/api.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
@@ -226,7 +226,7 @@
                             <article class="card">
 
                                 <div class="card-body">
-                                    <a href="https://yih-chen.github.io/learning/2022/git01.html" class="d-block my-3"><h3>Git基本概念和安裝</h3></a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/git01.html" class="d-block my-3"><h3>Git基本概念和安裝</h3></a>
                                     <div class="mb-3"><span>By Joe</span>
                                         <span class="border-bottom border-primary px-2 mx-1"></span>
                                         <span>2022-08-22</span>
@@ -234,7 +234,7 @@
 
                                     </div>
                                     <p class="card-text">Git基本介紹以及安裝流程</p>
-                                    <a href="https://yih-chen.github.io/learning/2022/git01.html" class="btn btn-outline-primary">read more</a>
+                                    <a href="https://yih-chen.github.io/learning/articles2022/git01.html" class="btn btn-outline-primary">read more</a>
                                 </div>
                             </article>
                         </div>
