--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <link href="https://yih-chen.github.io/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+
+    <h2>你的裝置 Token 是：</h2>
+    <pre id="token">載入中...</pre>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
