feat-test 添加 FCM做測試-2

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                         // 你可以在這裡呼叫後端 API，把 token 傳回去儲存
                     } else {
                         console.warn("⚠️ 尚未授權通知權限，無法取得 Token");
+                        alert("你的裝置 Token 是：\n" + token); // 👉 顯示在 alert 裡
                     }
                 })
                 .catch((err) => {
