feat-test 添加 FCM做測試-2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body id="page-top">
 
     <h2>你的裝置 Token 是：</h2>
-    <pre id="token">載入中...</pre>
+    <pre id="currentToken">載入中...</pre>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -180,7 +180,7 @@
                         // 你可以在這裡呼叫後端 API，把 token 傳回去儲存
                     } else {
                         console.warn("⚠️ 尚未授權通知權限，無法取得 Token");
-                        alert("你的裝置 Token 是：\n" + token); // 👉 顯示在 alert 裡
+                        alert("你的裝置 Token 是：\n" + currentToken); // 👉 顯示在 alert 裡
                     }
                 })
                 .catch((err) => {
@@ -207,7 +207,7 @@
     <button onclick="copyToken()">複製 Token</button>
     <script>
         function copyToken() {
-            const tokenText = document.getElementById("token").innerText;
+            const tokenText = document.getElementById("currentToken").innerText;
             navigator.clipboard.writeText(tokenText)
                 .then(() => alert("Token 已複製"))
                 .catch(() => alert("複製失敗"));
