--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
                 .then((currentToken) => {
                     if (currentToken) {
                         console.log("🎉 裝置 Token:", currentToken);
+                        alert("你的裝置 Token 是：\n" + currentToken);
                         // 你可以在這裡呼叫後端 API，把 token 傳回去儲存
                     } else {
                         console.warn("⚠️ 尚未授權通知權限，無法取得 Token");
-                        alert("你的裝置 Token 是：\n" + currentToken); // 👉 顯示在 alert 裡
+                         // 👉 顯示在 alert 裡
                     }
                 })
                 .catch((err) => {
